// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeatmapLegendVisibilitySettings responds correctly to clicking to hide 1`] = `
Object {
  "legendIsVisible": false,
}
`;

exports[`HeatmapLegendVisibilitySettings responds correctly to clicking to show 1`] = `
Object {
  "legendIsVisible": true,
}
`;
